Rename Launcher class and enable preview features for jlink