@@ -34,7 +34,7 @@ tasks.withType(JavaExec) {
 
 application {
     mainModule = 'tech.houssemnasri.gifx'
-    mainClass = 'tech.houssemnasri.gifx.HelloApplication'
+    mainClass = 'tech.houssemnasri.gifx.App'
 }
 
 javafx {
@@ -57,6 +57,7 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
+        jvmArgs = ['--enable-preview']
     }
 }
 
